# PPOIS2

jurassic_park_project/: README.md  pyproject.toml
jurassic_park_project/src/: main.py  models.py  services.py
jurassic_park_project/tests/: test_logic.py  test_main.py
lab2/: Readme.md  controller.py  main.py  models.py
lab2/data/: test_students.xml  test_students1.xml
lab2/view/: dialogs.py  main_window.py
