[project]
name = "jurassic-park-project"
version = "0.1.0"
description = ""
authors = [
    {name = "nerretten",email = "nerretten@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
